# motion_by_cnn

./: .gitignore  CMakeLists.txt  README.md  labels.txt  package.xml  pyproject.toml
motion_by_cnn/: utils.py
scripts/: move_by_cnn.py  save_images.py
