[project]
name = "motion-by-cnn"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "koichirokato", email = "k.koichiro0222@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "opencv-python>=4.8.1.78",
    "tensorflow>=2.13.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
